<resources>
    <string name="app_name">TVSeries project APP</string>
    <string name="header">TVSeries</string>
    <string name="your_login">Your login:</string>
    <string name="your_password">Your password:</string>
    <string name="login">Login</string>
    <string name="show">Tv Show</string>
    <string name="list">all</string>
    <string name="profile">profile</string>
    <string name="hello_blank_fragment">login_fragment</string>
    <string name="refreshButton">Обновить</string>
    <string name="show_pic_descr">Picture of the show</string>
    <string name="profile_image">Profile image</string>
    <string name="no_profile">no_profile</string>
    <string name="no_age">no_age</string>
    <string name="episode_name">episode name</string>
    <string name="episode_description">episode description</string>
    <string name="addshow">add show</string>
    <string name="logout">logout</string>
    <string name="mediumRating">Рейтинг:</string>
    <string name="descriptionShow">Описание:</string>
    <string name="addWatch">I watch it</string>
    <string name="comments">Comments</string>
    <string name="episodesText">Эпизоды:</string>
</resources>
