<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollViewShow"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="7dp"
    android:scrollbars="none">

    <LinearLayout
        android:id="@+id/testLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".fragments.showFragment">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/show_pic"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/show_pic_descr" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/show_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/show_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/show_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/mediumRating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mediumRating"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/show_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:layout_marginStart="5dp"
                        android:textSize="20sp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/showDescription"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/descriptionShow"
                    android:textColor="@color/colorPrimary"
                    android:gravity="bottom"
                    android:textSize="20sp" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/showDescriptionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/episodesText"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/episodeView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="10dp"
            android:background="@drawable/border">

        </android.support.v7.widget.RecyclerView>

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/showIsWatch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addWatch"
                android:textSize="20sp" />

            <Button
                android:id="@+id/commentsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/comments"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>